Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-85260
SBE $mergeObjects crashes server with undefined input
Undo Transition
Closed
null
Export
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Fixed
Priority:
Major - P3
Fix Version/s:
7.3.0-rc0
,
7.0.6
Affects Version/s:
None
Component/s:
None
Labels:
None
Field Tab
Aha! Info
Assigned Teams:
Query Execution
Backwards Compatibility:
Fully Compatible
Operating System:
ALL
Backport Requested:
v7.0
Sprint:
QE 2024-01-22, QE 2024-02-05
Linked BF Score:
135
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Description
Repro and description in dev-only comment
Attachments
Activity
People
Assignee:
Matt Boros
Reporter:
Matt Boros
Participants:
Githook User
,
Matt Boros
Votes
:
0
Vote for this issue
Watchers:
6
Start watching this issue
Dates
Created:
Jan 16 2024 06:50:47 PM UTC
Updated:
Jan 23 2024 08:00:34 PM UTC
Resolved:
Jan 22 2024 07:01:27 PM UTC
PagerDuty