SERVER-85260 change $mergeObjects with undefined to match classic behavior (#18160)

GitOrigin-RevId: 77f07000d3801840b8ac1e4d12645e2ea4f96209